<resources>
    <string name="app_name">HN</string>

    <string name="error_no_item">No item loaded</string>
    <string name="error_loading_page">Error loading page</string>
    <string name="error_wpm_input">Enter a value between 250 and 1500</string>
    <string name="error_parsing_readable_text">Error parsing text</string>
    <string name="error_comment_loading">Couldn"'"t load comments. Swipe to retry</string>
    <string name="error_opening_deleted">Can"'"t open deleted %1$s</string>
    <string name="error_id_loading">Couldnt"'"t load item ids</string>
    <string name="error_too_many_reloads">Reloaded too many times. Swipe to try again</string>

    <string name="error_http_400">400 Bad Request</string>
    <string name="error_http_401">401 Unauthorised</string>
    <string name="error_http_403">403 Forbidden</string>
    <string name="error_http_404">404 Not Found</string>
    <string name="error_http_406">406 Not Acceptable</string>
    <string name="error_http_500">500 Internal Server Error</string>
    <string name="error_http_501">501 Not Implemented</string>
    <string name="error_http_502">502 Bad GateWay</string>
    <string name="error_http_503">503 Service Unavailable</string>
    <string name="error_http_504">504 GateWay Timeout</string>
    <string name="error_http_unknown">Unknown code %1$d</string>
    <string name="error_http_format_string">%1$s %2$s</string>

    <string name="title_wpm_dialog">Enter words per minute</string>
    <string name="title_text_dialog">Jump to a word</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_theme">Change theme</string>

    <string name="hint_wpm_input">Currently %1$d</string>

    <string name="button_skimmer_restart">Restart</string>

    <string name="text_start_time">Start time</string>
    <string name="text_end_time">End time</string>
    <string name="text_last_updated">Updated %1$s</string>
    <string name="text_item_by">By %1$s</string>
    <string name="text_title_empty"><b>\u2026</b></string>
    <string name="text_info_empty">\u2026</string>
    <string name="text_attempting_item_load">Loading item</string>
    <string name="text_no_comments">No comments yet</string>
    <string name="text_user_without_about">User has no about</string>
    <string name="text_traversing_comments">Traversing children to find parent Item</string>
    <string name="text_deleted_comment">[Deleted comment]</string>
    <string name="text_redirecting_reader">Redirecting through parser service</string>
    <string name="text_item_deleted">[Deleted item]</string>
    <string name="text_settings_theme">Theme</string>
    <string name="text_use_dark_theme">Use dark theme</string>
    <string name="text_auto_dark_theme">Set dark theme at time</string>
    <string name="text_settings_content">Content</string>
    <string name="text_content_cards">Show content as cards</string>
    <string name="text_mark_when_passed">Mark read when passed</string>
    <string name="text_mark_new_items">Mark new items</string>
    <string name="text_scroll_to_top">Scroll to top on change</string>
    <string name="text_volume_navigation">Navigate with volume keys</string>
    <string name="text_settings_comments">Comments</string>
    <string name="text_comments_cards">Show children as cards</string>
    <string name="text_expand_comments">Expand children by default</string>
    <string name="text_animate_comments">Animate comment insertion</string>
    <string name="text_settings_browser">Browser</string>
    <string name="text_block_ads">Block ads in browser</string>
    <string name="text_disable_horizontal_scrolling">Disable horizontal scrolling in browser</string>
    <string name="text_lazy_load">Lazy load content</string>
    <string name="text_settings_data">Data</string>
    <string name="text_settings_info">Info</string>
    <string name="text_show_seekbar_hint">Show hint in Skimmer seekbar</string>
    <string name="text_load_in_background">Load while you are viewing an item</string>
    <string name="text_scrollbar">Show scroll bar</string>
    <string name="text_fast_scroll">Enable fast scrolling</string>
    <string name="text_bottom_toolbar">Show toolbar at bottom of screen</string>
    <string name="text_comment_title_date">%1$s | %2$s</string>
    <string name="text_open_with_docs">Open in app with Google Docs</string>
    <string name="text_download_pdf">Download PDF</string>
    <string name="text_hide_navigation_fullscreen">Hide navigation in fullscreen</string>
    <string name="text_skimmer_text_body">Show skimmer text below skimmer</string>
    <string name="text_title_date_range">Select a start and end date</string>
    <string name="text_switching_dates">Switching mis-ordered dates</string>
    <string name="text_comment_children"> %1$d comment</string>
    <string name="text_comment_child_count">Show child count on each comment</string>
    <string name="text_floating_fab">Use floating button for scrolling</string>

    <string name="shortcut_top">Top</string>
    <string name="shortcut_best">Best</string>
    <string name="shortcut_new">New</string>
    <string name="shortcut_search">Search</string>

    <string name="action_find_in_page">Find in page</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset settings</string>
    <string name="action_back">Back</string>
    <string name="action_later">LATER</string>
    <string name="action_feed_options">Feed options</string>

    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head>
                <title>Title</title>
                <style type="text/css">
                    body {
                        font-size: %1$fpx;
                        background-color: %2$s;
                        margin: %3$fpx %4$fpx %5$fpx %6$fpx;
                        line-height: %7$f;
                    }
                    a, p, span, .caption, .caption-text, .interactive-source, .figcaption, .blockquote, .em, div {
                        color:%10$s;
                    }
                    img {display: inline; height: auto; max-width: 100%%;}
                    pre {white-space: pre-wrap;}
                    iframe {width: 90vw; height: 50.625vw;} /* 16:9 */
                </style>
            </head>
            <body>%9$s</body>
        </html>
        ]]>
    </string>

    <string name="pref_theme_toolbar_bottom" translatable="false">THEME_TOOLBAR_BOTTOM</string>
    <string name="pref_viewer_pages" translatable="false">VIEWER_PAGES</string>
    <string name="pref_viewer_sheet" translatable="false">VIEWER_SHEET</string>
    <string name="pref_data_ad_block" translatable="false">DATA_AD_BLOCKING</string>
    <string name="pref_data_bg_loading" translatable="false">DATA_BACKGROUND_LOADING</string>
    <string name="pref_skimmer_speed" translatable="false">SKIMMER_SPEED</string>
    <string name="pref_skimmer_seekbar_hint" translatable="false">SKIMMER_SEEKBAR_HINT</string>
    <string name="pref_skimmer_parsed_text" translatable="false">SKIMMER_PARSED_TEXT</string>
    <string name="pref_reader_font" translatable="false">READER_FONT</string>
    <string name="pref_reader_font_size" translatable="false">READER_FONT_SIZE</string>
    <string name="pref_reader_line_spacing" translatable="false">READER_LINE_SPACING</string>
    <string name="pref_browser_default" translatable="false">BROWSER_DEFAULT</string>
    <string name="pref_browser_navigation" translatable="false">BROWSER_NAVIGATION</string>
    <string name="pref_browser_lazy" translatable="false">BROWSER_LAZY_LOADING</string>
    <string name="pref_browser_redirect" translatable="false">BROWSER_REDIRECT</string>
    <string name="pref_browser_horizontal_scrolling" translatable="false">BROWSER_HORIZONTAL_SCROLLING</string>
    <string name="pref_comments_default_mode" translatable="false">COMMENTS_DEFAULT_MODE</string>
    <string name="pref_comments_cards" translatable="false">COMMENTS_CARDS</string>
    <string name="pref_comments_font" translatable="false">COMMENTS_FONT</string>
    <string name="pref_comments_font_size" translatable="false">COMMENTS_FONT_SIZE</string>
    <string name="pref_comments_line_spacing" translatable="false">COMMENTS_LINE_SPACING</string>
    <string name="pref_comments_volume_navigation" translatable="false">COMMENTS_VOLUME_NAVIGATION</string>
    <string name="pref_comments_floating_fab" translatable="false">COMMENTS_FLOATING_FAB</string>
    <string name="pref_comments_child_count" translatable="false">COMMENTS_CHILD_COUNT</string>
    <string name="pref_comments_shorten_long_comments" translatable="false">COMMENTS_SHORTEN_LONG_COMMENTS</string>

    <string name="pref_feed_cards" translatable="false">FEED_CARDS</string>
    <string name="pref_feed_default_state" translatable="false">FEED_DEFAULT_STATE</string>
    <string name="pref_feed_font" translatable="false">FEED_FONT</string>
    <string name="pref_feed_font_size" translatable="false">FEED_FONT_SIZE</string>
    <string name="pref_feed_line_spacing" translatable="false">FEED_LINE_SPACING</string>
    <string name="pref_feed_mark_read" translatable="false">FEED_MARK_READ</string>
    <string name="pref_feed_scroll_to_top" translatable="false">FEED_SCROLL_TO_TOP</string>
    <string name="pref_feed_volume_navigation" translatable="false">FEED_VOLUME_NAVIGATION</string>
    <string name="pref_feed_scroll_bar" translatable="false">FEED_SCROLL_BAR</string>
    <string name="pref_feed_fast_scrolling_bar" translatable="false">FEED_FAST_SCROLLING_BAR</string>
    <string name="pref_feed_floating_fab" translatable="false">FEED_FLOATING_FAB</string>
    <string name="pref_feed_mark_new" translatable="false">FEED_MARK_NEW</string>

</resources>
